# KrisLogger

./: .gitignore  CMakeLists.txt  Logger.cpp  version.h.in
include/: Logger.h  Version.h
include/KrisLogger/: Logger.h
src/: Logger.cpp
